--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -26,6 +26,7 @@ jobs:
     - name: 打包  ️
       run: |
         npm run export
+        cd out
         touch out/.nojekyll
     - name: 部署  
       uses: JamesIves/github-pages-deploy-action@v4
